--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0099ff" fill-opacity="1" d="M0,96L80,128C160,160,320,224,480,229.3C640,235,800,181,960,165.3C1120,149,1280,171,1360,181.3L1440,192L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
     <section class="footer" id="contact">
         <div class="text-center">
-            <h1>Contact</h1>
+            <h1>Contact Me</h1>
             <a href=""><i class='bx bxl-instagram'></i></a>
             <a href=""><i class='bx bxl-linkedin' ></i></a>
             <a href=""><i class='bx bxs-envelope' ></i></a>
