--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <p>Seorang mahasiswa informatika yang sedang fokus pada
                     pengembangan web dan analisis data.
                 </p>
-                <a href="#about" class="btn-box">More about me</a>
+                <a href="#about" class="read">More about me</a>
             </div>
         </div>
     </section>
@@ -42,19 +42,12 @@
         <div class="about-text">
             <h2>About <span>Me</span></h2>
             <h4>Mahasiswa Universitas Tanjungpura</h4>
-            <p>Hai! Aku mahasiswa Informatika di Universitas Tanjungpura (UNTAN) dan
-                sekarang lagi di semester 4. Selain sibuk kuliah, aku juga aktif di
-                organisasi Himpunan Mahasiswa Informatika. Lewat organisasi ini, aku
-                banyak belajar tentang kerja tim, kepemimpinan, dan tentunya ikut
-                berkontribusi dalam kegiatan-kegiatan seru bareng teman-teman satu
-                jurusan. Aku punya ketertarikan besar di dunia teknologi, terutama
-                di bidang software development. Aku suka banget ngulik-ngulik kode,
-                bikin aplikasi, dan belajar hal baru seputar pemrograman. Saat ini
-                aku lagi mendalami beberapa bahasa pemrograman seperti Python, Java,
-                dan C++. Bagi aku, jadi developer itu bukan cuma soal bikin
-                aplikasi, tapi juga tentang nyari solusi dari masalah lewat teknologi.
-                Sekarang aku lagi semangat banget buat terus belajar dan ngembangin
-                skill lewat proyek-proyek yang aku kerjain.</p>
+            <p>Halo! Saya Rayhan Dwi Putra, seorang mahasiswa Informatika yang memiliki ketertarikan tinggi pada dunia
+                teknologi, khususnya dalam pengembangan web, analisis data, dan pemrograman. Saya aktif mengembangkan
+                kemampuan melalui berbagai proyek dan pelatihan online, serta selalu terbuka untuk tantangan baru yang
+                dapat memperluas wawasan dan pengalaman saya di bidang IT.Saat ini, saya fokus mengasah keterampilan
+                teknis dan membangun portofolio yang mencerminkan dedikasi
+                saya terhadap kualitas dan inovasi.</p>
         </div>
     </section>
 
@@ -66,25 +59,22 @@
                     <div>
                         <i style="color: #c95d2e;" class='bx bxl-html5'></i>
                         <h2>HTML</h2>
-                        <p>HTML adalah bahasa standar yang digunakan untuk membuat struktur dasar sebuah halaman web.
-                            Dengan HTML, kita bisa menentukan elemen-elemen seperti judul, paragraf, gambar, tautan,
-                            tabel, dan lain-lain. Bisa dibilang, HTML adalah "kerangka" dari sebuah website.</p>
+                        <p>Digunakan untuk membuat struktur dasar halaman web, seperti portofolio ini, dengan susunan
+                            elemen yang terorganisir dan semantic.</p>
                         <a href="#" class="read">Learn More</a>
                     </div>
                     <div>
                         <i style="color: #147bbc;" class='bx bxl-css3'></i>
                         <h2>CSS</h2>
-                        <p>CSS atau Cascading Style Sheets biasanya digunakan untuk mengatur tampilan atau style dari elemen HTML. Dengan CSS, kita bisa
-                            mengatur warna, ukuran teks, tata letak, animasi, dan lainnya agar halaman web terlihat
-                            menarik dan responsif.</p>
+                        <p>Digunakan untuk memperindah tampilan website agar responsif dan menarik di berbagai ukuran
+                            layar, serta mendukung pengalaman pengguna yang lebih baik.</p>
                         <a href="#" class="read">Learn More</a>
                     </div>
                     <div>
                         <i style="color: #8892BE;" class='bx bxl-php'></i>
                         <h2>PHP</h2>
-                        <p>PHP adalah bahasa pemrograman sisi server yang digunakan untuk membuat halaman web yang
-                            dinamis. PHP bisa digunakan untuk menangani data dari form, berinteraksi dengan database,
-                            mengatur sesi login, dan sebagainya.</p>
+                        <p>Menguasai dasar-dasar pemrograman backend, termasuk mengolah form dan koneksi ke database
+                            MySQL secara sederhana.</p>
                         <a href="#" class="read">Learn More</a>
                     </div>
                 </div>
@@ -99,34 +89,42 @@
                 <div class="services-list">
                     <div class="dicoding">
                         <img src="assets/image/dicoding.png" alt="">
-                        <h2>Dicoding</h2>
-                        <p>Sertifikat yang saya dapatkan dari Dicoding yaitu tentang Belajar Dasar AI.</p>
+                        <h2>Belajar Dasar AI - Dicoding</h2>
+                        <p>Mempelajari konsep dasar kecerdasan buatan, termasuk machine learning, natural language
+                            processing, dan penerapan AI dalam kehidupan sehari-hari.</p>
                         <a href="#" class="read">Lihat Sertifikat</a>
                     </div>
                     <div class="revou">
                         <img src="assets/image/revou.png" alt="">
-                        <h2>Revou</h2>
-                        <p>Sertifikat yang saya dapatkan dari Revou yaitu tentang Intro to Data Analytics.</p>
+                        <h2>Intro To Data Analytics - RevoU</h2>
+                        <p>Memahami proses analisis data dari pengumpulan, pengolahan, hingga visualisasi menggunakan
+                            spreadsheet dan Google Data Studio.
+
+                        </p>
                         <a href="#" class="read">Lihat Sertifikat</a>
                     </div>
                     <div class="hackerrank">
                         <img src="assets/image/hackerrank.png" alt="">
-                        <h2>HackerRank</h2>
-                        <p>Sertifikat yang saya dapatkan dari HackerRank yaitu tentang Problem Solving (Basic)
-                            , SQL(Basic) dan SQL(Intermediate).</p>
+                        <h2>Problem Solving (Basic) – HackerRank</h2>
+                        <p>Menyelesaikan tantangan logika dan algoritma dasar sebagai bentuk pengasahan keterampilan
+                            pemrograman dan pemecahan masalah.</p>
                         <a href="#" class="read">Lihat Sertifikat</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0099ff" fill-opacity="1" d="M0,96L80,128C160,160,320,224,480,229.3C640,235,800,181,960,165.3C1120,149,1280,171,1360,181.3L1440,192L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#0099ff" fill-opacity="1"
+            d="M0,96L80,128C160,160,320,224,480,229.3C640,235,800,181,960,165.3C1120,149,1280,171,1360,181.3L1440,192L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z">
+        </path>
+    </svg>
     <section class="footer" id="contact">
         <div class="text-center">
             <h1>Contact Me</h1>
             <a href=""><i class='bx bxl-instagram'></i></a>
-            <a href=""><i class='bx bxl-linkedin' ></i></a>
-            <a href=""><i class='bx bxs-envelope' ></i></a>
+            <a href=""><i class='bx bxl-linkedin'></i></a>
+            <a href=""><i class='bx bxs-envelope'></i></a>
             <h3>Created By @Ravrbae 2025</h3>
         </div>
     </section>
