--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Portofolio</title>
     <link rel="stylesheet" href="assets/style/app.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    
 </head>
 
 <body>
@@ -30,7 +31,7 @@
                 <p>Seorang mahasiswa informatika yang sedang fokus pada
                     pengembangan web dan analisis data.
                 </p>
-                <a href="#about" class="read">More about me</a>
+                <a href="#about" class="read1">More about me</a>
             </div>
         </div>
     </section>
@@ -45,9 +46,7 @@
             <p>Halo! Saya Rayhan Dwi Putra, seorang mahasiswa Informatika yang memiliki ketertarikan tinggi pada dunia
                 teknologi, khususnya dalam pengembangan web, analisis data, dan pemrograman. Saya aktif mengembangkan
                 kemampuan melalui berbagai proyek dan pelatihan online, serta selalu terbuka untuk tantangan baru yang
-                dapat memperluas wawasan dan pengalaman saya di bidang IT.Saat ini, saya fokus mengasah keterampilan
-                teknis dan membangun portofolio yang mencerminkan dedikasi
-                saya terhadap kualitas dan inovasi.</p>
+                dapat memperluas wawasan dan pengalaman saya di bidang IT.</p>
         </div>
     </section>
 
@@ -61,27 +60,27 @@
                         <h2>HTML</h2>
                         <p>Digunakan untuk membuat struktur dasar halaman web, seperti portofolio ini, dengan susunan
                             elemen yang terorganisir dan semantic.</p>
-                        <a href="#" class="read">Learn More</a>
+                        <a href="https://www.w3schools.com/html/" class="read">Learn More</a>
                     </div>
                     <div>
                         <i style="color: #147bbc;" class='bx bxl-css3'></i>
                         <h2>CSS</h2>
                         <p>Digunakan untuk memperindah tampilan website agar responsif dan menarik di berbagai ukuran
                             layar, serta mendukung pengalaman pengguna yang lebih baik.</p>
-                        <a href="#" class="read">Learn More</a>
+                        <a href="https://www.w3schools.com/Css/" class="read">Learn More</a>
                     </div>
                     <div>
                         <i style="color: #8892BE;" class='bx bxl-php'></i>
                         <h2>PHP</h2>
                         <p>Menguasai dasar-dasar pemrograman backend, termasuk mengolah form dan koneksi ke database
                             MySQL secara sederhana.</p>
-                        <a href="#" class="read">Learn More</a>
+                        <a href="https://www.w3schools.com/php/default.asp" class="read">Learn More</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
+    
     <section>
         <div class="certificate" id="certificate">
             <div class="container">
@@ -92,7 +91,7 @@
                         <h2>Belajar Dasar AI - Dicoding</h2>
                         <p>Mempelajari konsep dasar kecerdasan buatan, termasuk machine learning, natural language
                             processing, dan penerapan AI dalam kehidupan sehari-hari.</p>
-                        <a href="#" class="read">Lihat Sertifikat</a>
+                        <a href="https://www.linkedin.com/in/rayhandwiputra/details/certifications/" class="read">Lihat Sertifikat</a>
                     </div>
                     <div class="revou">
                         <img src="assets/image/revou.png" alt="">
@@ -101,14 +100,14 @@
                             spreadsheet dan Google Data Studio.
 
                         </p>
-                        <a href="#" class="read">Lihat Sertifikat</a>
+                        <a href="https://www.linkedin.com/in/rayhandwiputra/details/certifications/" class="read">Lihat Sertifikat</a>
                     </div>
                     <div class="hackerrank">
                         <img src="assets/image/hackerrank.png" alt="">
                         <h2>Problem Solving (Basic) – HackerRank</h2>
                         <p>Menyelesaikan tantangan logika dan algoritma dasar sebagai bentuk pengasahan keterampilan
                             pemrograman dan pemecahan masalah.</p>
-                        <a href="#" class="read">Lihat Sertifikat</a>
+                        <a href="https://www.linkedin.com/in/rayhandwiputra/details/certifications/" class="read">Lihat Sertifikat</a>
                     </div>
                 </div>
             </div>
@@ -122,9 +121,9 @@
     <section class="footer" id="contact">
         <div class="text-center">
             <h1>Contact Me</h1>
-            <a href=""><i class='bx bxl-instagram'></i></a>
-            <a href=""><i class='bx bxl-linkedin'></i></a>
-            <a href=""><i class='bx bxs-envelope'></i></a>
+            <a href="https://www.instagram.com/ravrbae/"><i class='bx bxl-instagram'></i></a>
+            <a href="https://www.linkedin.com/in/rayhandwiputra/"><i class='bx bxl-linkedin'></i></a>
+            <a href="mailto:rayhan.d.putra24@gmail.com"><i class='bx bxs-envelope'></i></a>
             <h3>Created By @Ravrbae 2025</h3>
         </div>
     </section>
