--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portofolio</title>
     <link rel="icon" type="image/png" href="assets/image/profile.png">
     <link rel="stylesheet" href="assets/style/app.css">
@@ -61,21 +62,21 @@
                         <h2>HTML</h2>
                         <p>Digunakan untuk membuat struktur dasar halaman web, seperti portofolio ini, dengan susunan
                             elemen yang terorganisir dan semantic.</p>
-                        <a href="https://www.w3schools.com/html/" class="read">Learn More</a>
+                        <a href="https://www.w3schools.com/html/" class="read" target="_blank">Learn More</a>
                     </div>
                     <div>
                         <i style="color: #147bbc;" class='bx bxl-css3'></i>
                         <h2>CSS</h2>
                         <p>Digunakan untuk memperindah tampilan website agar responsif dan menarik di berbagai ukuran
                             layar, serta mendukung pengalaman pengguna yang lebih baik.</p>
-                        <a href="https://www.w3schools.com/Css/" class="read">Learn More</a>
+                        <a href="https://www.w3schools.com/Css/" class="read" target="_blank">Learn More</a>
                     </div>
                     <div>
                         <i style="color: #8892BE;" class='bx bxl-php'></i>
                         <h2>PHP</h2>
                         <p>Menguasai dasar-dasar pemrograman backend, termasuk mengolah form dan koneksi ke database
                             MySQL secara sederhana.</p>
-                        <a href="https://www.w3schools.com/php/default.asp" class="read">Learn More</a>
+                        <a href="https://www.w3schools.com/php/default.asp" class="read" target="_blank">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -92,7 +93,7 @@
                         <h2>Belajar Dasar AI - Dicoding</h2>
                         <p>Mempelajari konsep dasar kecerdasan buatan, termasuk machine learning, natural language
                             processing, dan penerapan AI dalam kehidupan sehari-hari.</p>
-                        <a href="https://www.linkedin.com/in/rayhandwiputra/details/certifications/" class="read">Lihat Sertifikat</a>
+                        <a href="https://www.linkedin.com/in/rayhandwiputra/details/certifications/" class="read" target="_blank">Lihat Sertifikat</a>
                     </div>
                     <div class="revou">
                         <img src="assets/image/revou.png" alt="">
@@ -101,14 +102,14 @@
                             spreadsheet dan Google Data Studio.
 
                         </p>
-                        <a href="https://www.linkedin.com/in/rayhandwiputra/details/certifications/" class="read">Lihat Sertifikat</a>
+                        <a href="https://www.linkedin.com/in/rayhandwiputra/details/certifications/" class="read" target="_blank">Lihat Sertifikat</a>
                     </div>
                     <div class="hackerrank">
                         <img src="assets/image/hackerrank.png" alt="">
                         <h2>Problem Solving (Basic) – HackerRank</h2>
                         <p>Menyelesaikan tantangan logika dan algoritma dasar sebagai bentuk pengasahan keterampilan
                             pemrograman dan pemecahan masalah.</p>
-                        <a href="https://www.linkedin.com/in/rayhandwiputra/details/certifications/" class="read">Lihat Sertifikat</a>
+                        <a href="https://www.linkedin.com/in/rayhandwiputra/details/certifications/" class="read" target="_blank">Lihat Sertifikat</a>
                     </div>
                 </div>
             </div>
@@ -122,9 +123,9 @@
     <section class="footer" id="contact">
         <div class="text-center">
             <h1>Contact Me</h1>
-            <a href="https://www.instagram.com/ravrbae/"><i class='bx bxl-instagram'></i></a>
-            <a href="https://www.linkedin.com/in/rayhandwiputra/"><i class='bx bxl-linkedin'></i></a>
-            <a href="mailto:rayhan.d.putra24@gmail.com"><i class='bx bxs-envelope'></i></a>
+            <a href="https://www.instagram.com/ravrbae/" target="_blank"><i class='bx bxl-instagram'></i></a>
+            <a href="https://www.linkedin.com/in/rayhandwiputra/" target="_blank"><i class='bx bxl-linkedin'></i></a>
+            <a href="mailto:rayhan.d.putra24@gmail.com" target="_blank"><i class='bx bxs-envelope'></i></a>
             <h3>Created By @Ravrbae 2025</h3>
         </div>
     </section>
