--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="header">
         <a href="#" class="logo">Portofolio</a>
-        <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
+        <nav class="navbar">
             <a href="#">Home</a>
             <a href="#about">About</a>
             <a href="#services">Skills</a>
