slide and background

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
     </section>
 
-    <section class="about" id="about">
+    <section class="about hidden show-on-scroll slide-top" id="about">
       <div class="about-img">
         <img src="assets/image/untan.png" alt="" />
       </div>
@@ -64,7 +64,7 @@
       </div>
     </section>
 
-    <section>
+    <section class="hidden show-on-scroll slide-top">
       <div class="services" id="services">
         <div class="container">
           <h1 class="sub-title">My <span>Skills</span></h1>
@@ -227,8 +227,8 @@
       </div>
     </section>
 
-    <section>
-      <div class="certificate" id="certificate">
+    <section class="hidden show-on-scroll slide-top">
+      <div class="certificate hidden" id="certificate">
         <div class="container">
           <h1 class="sub-title">My <span>Certificate</span></h1>
           <div class="certificate-list">
@@ -244,7 +244,7 @@
       </div>
     </section>
 
-    <section>
+    <section class="hidden show-on-scroll slide-top">
       <div class="project" id="project">
         <div class="container">
           <h1 class="sub-title">My <span>Project</span></h1>
@@ -293,8 +293,9 @@
         <a href="mailto:rayhan.d.putra24@gmail.com" target="_blank"
           ><i class="bx bxs-envelope"></i
         ></a>
-        <h3>Created By @Ravrbae 2025</h3>
+        <h3>Created By @Ravrbae</h3>
       </div>
     </section>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
