update navbar dan mobile

--- a/index.html
+++ b/index.html
@@ -52,14 +52,13 @@
       </div>
       <div class="about-text">
         <h2>About <span>Me</span></h2>
-        <h4>Mahasiswa Universitas Tanjungpura</h4>
         <p>
-          Halo! Saya Rayhan Dwi Putra, seorang mahasiswa Informatika yang
-          memiliki ketertarikan tinggi pada dunia teknologi, khususnya dalam
-          pengembangan web, dan pemrograman. Saya aktif mengembangkan kemampuan
-          melalui berbagai proyek dan pelatihan online, serta selalu terbuka
-          untuk tantangan baru yang dapat memperluas wawasan dan pengalaman saya
-          di bidang IT.
+          Halo! Saya Rayhan Dwi Putra, mahasiswa Informatika di Universitas
+          Tanjungpura yang memiliki ketertarikan tinggi pada dunia teknologi,
+          khususnya dalam pengembangan web dan pemrograman. Saya aktif
+          mengembangkan kemampuan melalui berbagai proyek dan pelatihan online,
+          serta selalu terbuka untuk tantangan baru yang dapat memperluas
+          wawasan dan pengalaman saya di bidang IT.
         </p>
       </div>
     </section>
