progres update sidebar

--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
         <a href="#contact">Contact</a>
       </nav>
     </header>
+
+    <!-- next update sidebar -->
+    <nav class="sidebar">
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+      <a href="#services">Skills</a>
+      <a href="#certificate">Certificate</a>
+      <a href="#project">Project</a>
+      <a href="#contact">Contact</a>
+    </nav>
     <section class="home" id="home">
       <div class="home-content">
         <img class="profileimage" src="assets/image/image.jpg" alt="" />
