--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header">
       <div class="header-left">
         <i class="bx bxs-user-circle"></i>
-        <a href="#home" class="logo"
+        <a href="" class="logo"
           >Porto<span style="color: cyan">folio</span></a
         >
       </div>
@@ -59,11 +59,11 @@
       </div>
     </section>
 
-    <section class="about hidden show-on-scroll slide-top" id="about">
-      <div class="about-img">
+    <section class="about" id="about">
+      <div class="about-img hidden show-on-scroll slide-top">
         <img src="assets/image/untan.png" alt="" />
       </div>
-      <div class="about-text">
+      <div class="about-text hidden show-on-scroll slide-top">
         <h2>About <span>Me</span></h2>
         <p>
           Halo! Saya Rayhan Dwi Putra, mahasiswa Informatika di Universitas
@@ -239,11 +239,11 @@
       </div>
     </section>
 
-    <section class="hidden show-on-scroll slide-top">
+    <section>
       <div class="certificate hidden" id="certificate">
         <div class="container">
-          <h1 class="sub-title">My <span>Certificate</span></h1>
-          <div class="certificate-list">
+          <h1 class="sub-title hidden show-on-scroll slide-top">My <span>Certificate</span></h1>
+          <div class="certificate-list hidden show-on-scroll slide-top">
             <div><img src="assets/image/sertif-dicoding1.png" alt="" /></div>
             <div><img src="assets/image/sertif-dicoding2.png" alt="" /></div>
             <div><img src="assets/image/sertif-revou1.png" alt="" /></div>
@@ -256,11 +256,11 @@
       </div>
     </section>
 
-    <section class="hidden show-on-scroll slide-top">
+    <section>
       <div class="project" id="project">
         <div class="container">
-          <h1 class="sub-title">My <span>Project</span></h1>
-          <div class="card">
+          <h1 class="sub-title hidden show-on-scroll slide-top">My <span>Project</span></h1>
+          <div class="card hidden show-on-scroll slide-top">
             <h2>Voting<span style="color: cyan">Yuk</span></h2>
             <p>
               Website Voting ini adalah aplikasi web berbasis JSP dan Servlet
