ganti foto profile

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <div class="absolute inset-0 border-4 border-transparent rounded-full" style="background: linear-gradient(white, white) padding-box, linear-gradient(45deg, #06b6d4, #0ea5e9, #06b6d4) border-box; animation: spin 3s linear infinite;"></div>
             
             <img 
-              src="assets/image/image.jpg" 
+              src="assets/image/FotoPersonal.jpeg" 
               alt="Rayhan Dwi Putra" 
               class="relative w-64 h-64 md:w-80 md:h-80 rounded-full object-cover border-4 border-cyan-400/50 shadow-2xl hover:scale-105 transition-transform duration-300"
             />
